# Yaketyyak

./: .replit  LICENSE  README.md  README_TUI.md  app.py  backend_test.py  build.py  design_guidelines.json  knowledge_base.py  pyproject.toml  replit.md  serve_tui.py  server.py  terminal_knowledge_base.json  themes.py  translator.py  tui_preview.py
.emergent/: emergent.yml
.github/workflows/: build-release.yml
attached_assets/: Pasted--Role-You-are-a-senior-full-stack-development-engineer-_1772826354876.txt  Pasted-Logo-Design-Brief-YaketyYak-What-it-is-YaketyYak-is-a-d_1772853292838.txt
backend/: .env  ai_translator.py  github_analyzer.py  knowledge_base.py  server.py
frontend/: .env  package.json  tailwind.config.js
frontend/src/: App.css  App.js  index.css
frontend/src/components/: GitAnalyzer.js  ModeToggle.js  Navbar.js  TerminalInput.js  TranslationPanel.js
memory/: PRD.md
src/terminal_translator/: ai_translator.py  knowledge_base.py  styles.tcss
static/: style.css
templates/: index.html
terminal-translator/: README.md  pyproject.toml  terminal_translator.spec
terminal-translator/.github/workflows/: build-release.yml
terminal-translator/src/terminal_translator/: __init__.py  main.py  shell_manager.py
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json
