[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terminal-translator"
version = "1.0.0"
description = "Google Translate for your Terminal - real-time plain-English explanations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Terminal Translator Team"}
]
keywords = ["terminal", "cli", "translator", "beginner", "learning", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Terminals",
]
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
    "pexpect>=4.9.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pyinstaller>=6.3.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
termtranslate = "terminal_translator.main:main"

[project.urls]
Homepage = "https://termtranslator.dev"
Repository = "https://github.com/yourusername/terminal-translator"
Documentation = "https://github.com/yourusername/terminal-translator#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/terminal_translator"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
